--- a/index.html
+++ b/index.html
@@ -647,35 +647,35 @@
         // Leave blank "" to use colored shapes
         // ============================================
         const SPRITES = {
-            player: "",
-            zombie1: "",
-            zombie2: "",
-            zombie3: "",
-            zombie4: "",
-            zombie5: "",
-            zombie6: "",
-            zombie7: "",
+            player: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/tank-2.png",
+            zombie1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 1.png",
+            zombie2: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 2.png",
+            zombie3: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 3.png",
+            zombie4: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 12.png",
+            zombie5: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-10.png",
+            zombie6: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-11.png",
+            zombie7: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-7.png",
             zombie8: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-8.png",
             zombie9: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-9.png",
-            zombie10: "",  // Stage 6 new zombie
-            zombie11: "",  // Stage 7 new zombie
-            zombie12: "",  // Stage 8 new zombie
-            zombie13: "",  // Stage 9 new zombie
-            zombie14: "",  // Stage 10 new zombie
+            zombie10: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-12.png",  // Stage 6 new zombie
+            zombie11: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-6.png",  // Stage 7 new zombie
+            zombie12: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-3.png",  // Stage 8 new zombie
+            zombie13: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-1.png",  // Stage 9 new zombie
+            zombie14: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-2.png",  // Stage 10 new zombie
             ammo: "",
             // Boss sprites for each stage
-            boss1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss-1.png",
-            boss2: "",   // Stage 2 boss
-            boss3: "",   // Stage 3 boss
-            boss4: "",   // Stage 4 boss
-            boss5: "",   // Stage 5 boss
-            boss6: "",   // Stage 6 boss 1
-            boss7: "",   // Stage 7 boss 1
-            boss8: "",   // Stage 8 boss 1
-            boss9: "",   // Stage 9 boss 1
-            boss10: "",  // Stage 10 boss 1
-            boss11: "",  // Stage 10 boss 2
-            boss12: "",  // Stage 10 boss 3
+            boss1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss-13.png",
+            boss2: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 15.png",   // Stage 2 boss
+            boss3: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 14.png",   // Stage 3 boss
+            boss4: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 4.png",   // Stage 4 boss
+            boss5: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 5.png",   // Stage 5 boss
+            boss6: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 6.png",   // Stage 6 boss 1
+            boss7: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 7.png",   // Stage 7 boss 1
+            boss8: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 8.png",   // Stage 8 boss 1
+            boss9: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 9.png",   // Stage 9 boss 1
+            boss10: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 10.png",  // Stage 10 boss 1
+            boss11: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 11.png",  // Stage 10 boss 2
+            boss12: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss 12.png",  // Stage 10 boss 3
             // 70 Building sprites (building1-building70)
             // Using the Oahu Roofing image you provided
             building1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
@@ -749,23 +749,23 @@
             building69: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
             building70: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
             // Stage-specific background tiles
-            groundTile1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-2.png",   // Stage 1 background
-            groundTile2: "",   // Stage 2 background
-            groundTile3: "",   // Stage 3 background
-            groundTile4: "",   // Stage 4 background
-            groundTile5: "",   // Stage 5 background
-            groundTile6: "",   // Stage 6 background
-            groundTile7: "",   // Stage 7 background
-            groundTile8: "",   // Stage 8 background
-            groundTile9: "",   // Stage 9 background
-            groundTile10: "",   // Stage 10 background
+            groundTile1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-4.png",   // Stage 1 background
+            groundTile2: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-5.png",   // Stage 2 background
+            groundTile3: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-3.png",   // Stage 3 background
+            groundTile4: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-2.png",   // Stage 4 background
+            groundTile5: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-1.png",   // Stage 5 background
+            groundTile6: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-6.png",   // Stage 6 background
+            groundTile7: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-7.png",   // Stage 7 background
+            groundTile8: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-8.png",   // Stage 8 background
+            groundTile9: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-9.png",   // Stage 9 background
+            groundTile10: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-3.png",   // Stage 10 background
             // Cutscene videos (MP4 format) - 30 seconds each
-            introCutscene: "", // Plays when starting a new game
-            stage1Cutscene: "", // Plays before stage 1 begins
-            stage2Cutscene: "", // Plays before stage 2 begins
-            stage3Cutscene: "", // Plays before stage 3 begins
-            stage4Cutscene: "", // Plays before stage 4 begins
-            stage5Cutscene: "",  // Plays before stage 5 begins
+            introCutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4", // Plays when starting a new game
+            stage1Cutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4", // Plays before stage 1 begins
+            stage2Cutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4", // Plays before stage 2 begins
+            stage3Cutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4", // Plays before stage 3 begins
+            stage4Cutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4", // Plays before stage 4 begins
+            stage5Cutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4",  // Plays before stage 5 begins
             // Boss weapon sprite
             coconutBomb: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Coconut%20bomb.png"
         };
@@ -777,15 +777,15 @@
         // ============================================
         const STAGE_MUSIC = {
             stage1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",
-            stage2: "",   // Stage 2 music
-            stage3: "",   // Stage 3 music
-            stage4: "",   // Stage 4 music
-            stage5: "",   // Stage 5 music
-            stage6: "",   // Stage 6 music
-            stage7: "",   // Stage 7 music
-            stage8: "",   // Stage 8 music
-            stage9: "",   // Stage 9 music
-            stage10: ""   // Stage 10 music
+            stage2: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 2 music
+            stage3: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 3 music
+            stage4: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 4 music
+            stage5: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 5 music
+            stage6: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 6 music
+            stage7: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 7 music
+            stage8: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 8 music
+            stage9: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3",   // Stage 9 music
+            stage10: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Stage-1-song.mp3"   // Stage 10 music
         };
 
         // Load images
