--- a/index.html
+++ b/index.html
@@ -640,10 +640,10 @@
         // Leave blank "" to use colored shapes
         // ============================================
         const SPRITES = {
-            player: "",
-            zombie1: "",
-            zombie2: "",
-            zombie3: "",
+            player: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/tank-2.png",
+            zombie1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Zombie-11.png",
+            zombie2: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss-11.png",
+            zombie3: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss-3.png",
             zombie4: "",
             zombie5: "",
             zombie6: "",
@@ -657,7 +657,7 @@
             zombie14: "",  // Stage 10 new zombie
             ammo: "",
             // Boss sprites for each stage
-            boss1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss-1.png",
+            boss1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Boss-13.png",
             boss2: "",   // Stage 2 boss
             boss3: "",   // Stage 3 boss
             boss4: "",   // Stage 4 boss
@@ -742,7 +742,7 @@
             building69: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
             building70: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
             // Stage-specific background tiles
-            groundTile1: "",   // Stage 1 background
+            groundTile1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Tile-2.png",   // Stage 1 background
             groundTile2: "",   // Stage 2 background
             groundTile3: "",   // Stage 3 background
             groundTile4: "",   // Stage 4 background
@@ -753,7 +753,7 @@
             groundTile9: "",   // Stage 9 background
             groundTile10: "",   // Stage 10 background
             // Cutscene videos (MP4 format) - 30 seconds each
-            introCutscene: "", // Plays when starting a new game
+            introCutscene: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Ad-1-Zombie.mp4", // Plays when starting a new game
             stage1Cutscene: "", // Plays before stage 1 begins
             stage2Cutscene: "", // Plays before stage 2 begins
             stage3Cutscene: "", // Plays before stage 3 begins
