--- a/index.html
+++ b/index.html
@@ -236,7 +236,23 @@
             padding: 20px;
             overflow-y: auto;  /* Allow scrolling if content too tall */
         }
-        
+        /* Loading Screen */
+        #loading-screen {
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 100%);
+            display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 300;
+        }
+        #loading-logo { 
+            max-width: 300px; max-height: 150px; margin-bottom: 30px; }
+        #loading-title { 
+            font-size: 2.5rem; color: #ff6b6b; margin-bottom: 20px; }
+        #loading-bar-container { 
+           width: 400px; max-width: 80%; height: 30px; background: rgba(0, 0, 0, 0.5); border: 3px solid #4a4a4a; border-radius: 15px; overflow: hidden; margin-bottom: 15px; }
+        #loading-bar { 
+            width: 0%; height: 100%; background: linear-gradient(90deg, #4ecdc4, #ff6b6b); transition: width 0.3s ease; }
+        #loading-percentage { 
+            font-size: 2rem; color: #ffd166; font-weight: bold; }
+  
         .screen-title {
             font-size: 2.5rem;
             color: #ff6b6b;
@@ -443,6 +459,14 @@
 </head>
 <body>
     <div id="game-container">
+        <div id="loading-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 100%); display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 9999; text-align: center;">
+            <img src="https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/ZOH-Logo-real.png" style="max-width: 300px; margin-bottom: 30px;">
+            <h1 style="font-size: 2.5rem; color: #ff6b6b; margin-bottom: 20px;">LOADING GAME</h1>
+            <div style="width: 400px; max-width: 80%; height: 30px; background: rgba(0, 0, 0, 0.5); border: 3px solid #4a4a4a; border-radius: 15px; overflow: hidden; margin-bottom: 15px;">
+                <div id="loading-bar" style="width: 0%; height: 100%; background: linear-gradient(90deg, #4ecdc4, #ff6b6b); transition: width 0.3s ease;"></div>
+            </div>
+            <p id="loading-percentage" style="font-size: 2rem; color: #ffd166; font-weight: bold;">0%</p>
+        </div>
         <canvas id="game-canvas"></canvas>
         
         <div id="game-ui">
@@ -790,9 +814,34 @@
 
         // Load images
         const IMG = {};
-        for (let key in SPRITES) {
-            IMG[key] = new Image();
-            if (SPRITES[key]) IMG[key].src = SPRITES[key];
+        let loadedImages = 0, totalImages = 0;
+
+        function preloadAssets() {
+            return new Promise((resolve) => {
+                const imagesToLoad = Object.keys(SPRITES).filter(key => SPRITES[key] && !SPRITES[key].endsWith('.mp4'));
+                totalImages = imagesToLoad.length;
+                if (totalImages === 0) { resolve(); return; }
+                imagesToLoad.forEach(key => {
+                    IMG[key] = new Image();
+                    IMG[key].onload = IMG[key].onerror = () => {
+                        loadedImages++;
+                        const pct = Math.floor((loadedImages / totalImages) * 100);
+                        document.getElementById('loading-bar').style.width = pct + '%';
+                        document.getElementById('loading-percentage').textContent = pct + '%';
+                        if (loadedImages === totalImages) {
+                            setTimeout(() => {
+                                document.getElementById('loading-screen').style.opacity = '0';
+                                setTimeout(() => {
+                                    document.getElementById('loading-screen').style.display = 'none';
+                                    document.getElementById('start-screen').classList.remove('hidden');
+                                }, 500);
+                                resolve();
+                            }, 500);
+                        }
+                    };
+                    IMG[key].src = SPRITES[key];
+                });
+            });
         }
 
         let gameState = {
@@ -1426,9 +1475,10 @@
             saveGame();
         }
 
-        function initGame() {
+        async function initGame() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
+            await preloadAssets();
             initBuildings();
             spawnInitialZombies();
             spawnHiddenAmmo();
