--- a/index.html
+++ b/index.html
@@ -703,18 +703,18 @@
             // 70 Building sprites (building1-building70)
             // Using the Oahu Roofing image you provided
             building1: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Building-2.png",
-            building2: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building3: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building4: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building5: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building6: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building7: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building8: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building9: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building10: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building11: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building12: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
-            building13: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
+            building2: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/HSS-B-2.png",
+            building3: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Lucky-Strike-B-3.png",
+            building4: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Hapa-B-4.png",
+            building5: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Other-Realms-B-5.png",
+            building6: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Shaka-B-6.png",
+            building7: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Blue-P-B-7.png",
+            building8: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Pit-Stop-B-8.png",
+            building9: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Top-Gun-B-9.png",
+            building10: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Pawn-Shop-B-10.png",
+            building11: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/S-Love-B-11.png",
+            building12: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Kapa-B-12.png",
+            building13: "https://github.com/TitanBusinessPros/ZOH-Buildings/raw/main/Angry-B-13.png",
             building14: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
             building15: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
             building16: "https://github.com/TitanBusinessPros/Zombie-Outbreak-Honolulu/raw/main/Oahu Roofing.png",
